# sorcerer

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  build.rs  build.sh  demo-agent.sh  install-hooks.sh
agent/: Cargo.toml  Containerfile
agent/src/: main.rs  server.rs
apprentice/: Cargo.toml  Containerfile  build.rs
apprentice/prompts/: agent_template.md
apprentice/src/: claude.rs  commands.rs  main.rs  server.rs
docs/: agent-mode.md
examples/: enchantments.md
hooks/: commit-msg  pre-commit  pre-push
proto/: spells.proto
src/: config.rs  lib.rs  main.rs  sorcerer.rs
tests/: agent_tests.rs  apprentice_tests.rs  container_tests.rs  conversation_context_tests.rs  error_handling_tests.rs  integration_tests.rs  sorcerer_tests.rs  unit_tests.rs
