[workspace]
members = [".", "apprentice"]
resolver = "2"

[package]
name = "sorcerer"
version = "0.1.0"
edition = "2021"

[lib]
name = "sorcerer"
path = "src/lib.rs"

[[bin]]
name = "srcrr"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
tokio = { version = "1.36", features = ["full"] }
tonic = "0.11"
prost = "0.12"
bollard = "0.16"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.6", features = ["v4"] }
dirs = "5.0"

[build-dependencies]
tonic-build = "0.11"

[dev-dependencies]
tempfile = "3.12"
assert_cmd = "2.0"
predicates = "3.1"
mockall = "0.13"
serial_test = "3.1"